--- a/TreasureFilter/html/main.html
+++ b/TreasureFilter/html/main.html
@@ -60,6 +60,6 @@
         </div>
     </div>
 </div>
-<script src="../js/main.js"></script>
+<script src="../script/main.js"></script>
 </body>
 </html>
