--- a/TreasureFilter/html/toServerList.html
+++ b/TreasureFilter/html/toServerList.html
@@ -5,6 +5,8 @@
     <title>九阴集市宝物筛选工具</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script>document.write("<script type='text/javascript' src='../script/version.js?v=" + Date.now() + "'><\/script>");</script>
+    <script type="text/javascript" src="../script/jquery.min.js"></script>
+    <script type="text/javascript" src="../script/template.js"></script>
     <link href="../style/global.css"  type="text/css" rel="stylesheet" />
     <script type="text/javascript">
         var _hmt = _hmt || [];
@@ -28,20 +30,20 @@
         <ul id="serveCon"></ul>
     </div>
     <p class="textCenter">
-        <a class="login-btn">点击登录</a>
+        <a class="login-btn">加载此区宝物数据</a>
     </p>
 </div>
 <script id="areaMode" type="template/htmlMode">
-    <li data-garea-id="@{gareaId}">@{gareaName}</li>
+    <li data-garea-id="{{gareaId}}">{{gareaName}}</li>
 </script>
 <script id="serveMode" type="template/htmlMode">
-    <li data-server-id="@{id}">@{serverName}</li>
+    <li data-server-id="{{id}}">{{serverName}}</li>
 </script>
 <script type="text/javascript">
     var v = window.config.version;
     var suffix = window.config.suffix;
     document.write('<link href="../style/main.css?v='+ v +'"  type="text/css" rel="stylesheet" />');
-    document.write('<script type="text/javascript" src="../script/control'+ suffix +'?v='+v+'"><\/script>');
+    <!-- document.write('<script type="text/javascript" src="../script/control'+ suffix +'?v='+v+'"><\/script>'); -->
     document.write('<script type="text/javascript" src="../script/toServerList'+ suffix +'?v='+v+'"><\/script>');
 </script>
 </body>
