feat: 服务器选择页面基本完成

--- a/TreasureFilter/html/toServerList.html
+++ b/TreasureFilter/html/toServerList.html
@@ -30,7 +30,7 @@
         <ul id="serveCon"></ul>
     </div>
     <p class="textCenter">
-        <a class="login-btn">加载此区宝物数据</a>
+        <a class="login-btn" onclick="lodeTreasure(this)">加载此区宝物数据</a>
     </p>
 </div>
 <script id="areaMode" type="template/htmlMode">
