feat: 主页雏形搭建

--- a/TreasureFilter/html/toServerList.html
+++ b/TreasureFilter/html/toServerList.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>九阴集市宝物筛选工具</title>
+    <title>选择游戏区服</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script>document.write("<script type='text/javascript' src='../script/version.js?v=" + Date.now() + "'><\/script>");</script>
     <script type="text/javascript" src="../script/jquery.min.js"></script>
@@ -43,7 +43,6 @@
     var v = window.config.version;
     var suffix = window.config.suffix;
     document.write('<link href="../style/main.css?v='+ v +'"  type="text/css" rel="stylesheet" />');
-    <!-- document.write('<script type="text/javascript" src="../script/control'+ suffix +'?v='+v+'"><\/script>'); -->
     document.write('<script type="text/javascript" src="../script/toServerList'+ suffix +'?v='+v+'"><\/script>');
 </script>
 </body>
