--- a/TreasureFilter/html/main.html
+++ b/TreasureFilter/html/main.html
@@ -7,8 +7,9 @@
     <script>document.write("<script type='text/javascript' src='../script/version.js?v=" + Date.now() + "'><\/script>");</script>
     <link href="../style/global.css"  type="text/css" rel="stylesheet" />
     <link href="../style/jquery.scrollbar.css"  type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="../script/template.js"></script>
     <script type="text/javascript" src="../script/jquery.min.js"></script>
-        <script type="text/javascript" src="../script/jquery.scrollbar.js"></script>
+    <script type="text/javascript" src="../script/jquery.scrollbar.js"></script>
     <script type="text/javascript" src="script/anonymousTopMenu.js"></script>
     <script type="text/javascript">
         var _hmt = _hmt || [];
@@ -58,63 +59,63 @@
                 <div class="filter_content">
                     <dl>
                         <dt class="big_catagory" data-code="1">基础：</dt>
-                        <dd data-code="116">气血上限</dd>
-                        <dd data-code="116">内力上限</dd>
-                        <dd data-code="116">气血恢复速率</dd>
-                        <dd data-code="116">内力恢复速率</dd>
-                        <dd data-code="116">招架耐力上限</dd>
-                        <dd data-code="116">每秒招架耐力恢复</dd>
-                        <dd data-code="116">轻功值上限</dd>
+                        <dd data-code="qxsx">气血上限</dd>
+                        <dd data-code="nlsx">内力上限</dd>
+                        <dd data-code="qxhfsl">气血恢复速率</dd>
+                        <dd data-code="nlhfsl">内力恢复速率</dd>
+                        <dd data-code="zjnlsx">招架耐力上限</dd>
+                        <dd data-code="mmzjnlhf">每秒招架耐力恢复</dd>
+                        <dd data-code="qgzsx">轻功值上限</dd>
                     </dl>
                     <dl>
-                        <dt class="big_catagory" data-code="3">外功：</dt>
-                        <dd data-code="191">近身威力</dd>
-                        <dd data-code="191">远程威力</dd>
-                        <dd data-code="191">外功暴击</dd>
-                        <dd data-code="191">外功暴击率</dd>
-                        <dd data-code="191">外功暴击伤害</dd>
-                        <dd data-code="191">外功命中</dd>
-                        <dd data-code="191">外功命中率</dd>
-                        <dd data-code="191">外功防御</dd>
-                        <dd data-code="191">外功伤害减免</dd>
-                        <dd data-code="191">外功防御忽视</dd>
-                        <dd data-code="191">外功伤害减免忽视</dd>
-                        <dd data-code="191">外功招架</dd>
-                        <dd data-code="191">外功招架忽视</dd>
+                        <dt class="big_catagory" data-code="2">外功：</dt>
+                        <dd data-code="jswl">近身威力</dd>
+                        <dd data-code="ycwl">远程威力</dd>
+                        <dd data-code="wgbj">外功暴击</dd>
+                        <dd data-code="wgbjl">外功暴击率</dd>
+                        <dd data-code="wgbjsh">外功暴击伤害</dd>
+                        <dd data-code="wgmz">外功命中</dd>
+                        <dd data-code="wgmzl">外功命中率</dd>
+                        <dd data-code="wgfy">外功防御</dd>
+                        <dd data-code="wgshjm">外功伤害减免</dd>
+                        <dd data-code="wgfyhs">外功防御忽视</dd>
+                        <dd data-code="wgshjmhs">外功伤害减免忽视</dd>
+                        <dd data-code="wgzj">外功招架</dd>
+                        <dd data-code="wgzjhs">外功招架忽视</dd>
                     </dl>
                     <dl>
-                        <dt class="big_catagory" data-code="9">内功：</dt>
-                        <dd data-code="191">内功威力</dd>
-                        <dd data-code="191">内功暴击</dd>
-                        <dd data-code="191">内功暴击率</dd>
-                        <dd data-code="191">内功暴击伤害</dd>
-                        <dd data-code="191">内功命中</dd>
-                        <dd data-code="191">内功命中率</dd>
-                        <dd data-code="191">内功防御</dd>
-                        <dd data-code="191">刚防御</dd>
-                        <dd data-code="191">刚伤害减免</dd>
-                        <dd data-code="191">柔防御</dd>
-                        <dd data-code="191">柔伤害减免</dd>
-                        <dd data-code="191">阴防御</dd>
-                        <dd data-code="191">阴伤害减免</dd>
-                        <dd data-code="191">阳防御</dd>
-                        <dd data-code="191">阳伤害减免</dd>
-                        <dd data-code="191">内功防御忽视</dd>
-                        <dd data-code="191">刚防御忽视</dd>
-                        <dd data-code="191">柔防御忽视</dd>
-                        <dd data-code="191">阴防御忽视</dd>
-                        <dd data-code="191">阳防御忽视</dd>
-                        <dd data-code="191">内功伤害减免忽视</dd>
-                        <dd data-code="191">内功化解</dd>
-                        <dd data-code="191">内功化解忽视</dd>
+                        <dt class="big_catagory" data-code="3">内功：</dt>
+                        <dd data-code="ngwl">内功威力</dd>
+                        <dd data-code="ngbj">内功暴击</dd>
+                        <dd data-code="ngbjl">内功暴击率</dd>
+                        <dd data-code="ngbjsh">内功暴击伤害</dd>
+                        <dd data-code="ngmz">内功命中</dd>
+                        <dd data-code="ngmzl">内功命中率</dd>
+                        <dd data-code="ngfy">内功防御</dd>
+                        <dd data-code="gangfy">刚防御</dd>
+                        <dd data-code="gangshjm">刚伤害减免</dd>
+                        <dd data-code="roufy">柔防御</dd>
+                        <dd data-code="roushjm">柔伤害减免</dd>
+                        <dd data-code="yinfy">阴防御</dd>
+                        <dd data-code="yinshjm">阴伤害减免</dd>
+                        <dd data-code="yangfy">阳防御</dd>
+                        <dd data-code="yangshjm">阳伤害减免</dd>
+                        <dd data-code="ngfyhs">内功防御忽视</dd>
+                        <dd data-code="gangfyhs">刚防御忽视</dd>
+                        <dd data-code="roufyhs">柔防御忽视</dd>
+                        <dd data-code="yinfyhs">阴防御忽视</dd>
+                        <dd data-code="yangfyhs">阳防御忽视</dd>
+                        <dd data-code="ngshjm">内功伤害减免忽视</dd>
+                        <dd data-code="nghj">内功化解</dd>
+                        <dd data-code="nghjhs">内功化解忽视</dd>
                     </dl>
                     <dl class="last_child">
                         <dt class="big_catagory" data-code="4">其他：</dt>
-                        <dd data-code="school_shaolin">封劲</dd>
-                        <dd data-code="school_shaolin">被暴击几率降低</dd>
-                        <dd data-code="school_shaolin">暴击伤害减免</dd>
-                        <dd data-code="school_shaolin">闪避</dd>
-                        <dd data-code="school_shaolin">闪避率</dd>
+                        <dd data-code="fj">封劲</dd>
+                        <dd data-code="bbjjljd">被暴击几率降低</dd>
+                        <dd data-code="bjshjm">暴击伤害减免</dd>
+                        <dd data-code="sb">闪避</dd>
+                        <dd data-code="sbl">闪避率</dd>
                     </dl>
                 </div>
                 <i class="filter_control open" title="点击收起"></i>
@@ -125,8 +126,46 @@
                 <li class="default selected" data-param="default">默认排序</li>
                 <li class="asc" data-param="D_PUBLICITY_END_DATE">时间<i></i></li>
                 <li class="asc" data-param="N_PRICE">价格<i></i></li>
-                <li class="asc" data-param="unitPrice">单价<i></i></li>
-                <li class="asc" data-param="N_GRADE">等级<i></i></li>
+                <li class="asc" data-param="unitPrice">
+                    <select id="pinc">
+                        <option value="7">全部品次</option>
+                        <option value="7">玉</option>
+                        <option value="7">金</option>
+                        <option value="7">银</option>
+                        <option value="7">铜</option>
+                        <option value="7">铁</option>
+                        <option value="7">木</option>
+                    </select>
+                </li>
+                <li class="asc" data-param="N_GRADE">
+                    <select>
+                        <option value="7">全部种类</option>
+                        <option value="7">750宝物</option>
+                        <option value="7">普通宝物</option>
+                    </select>
+                </li>
+                <li class="asc" data-param="N_GRADE">
+                    <ul class="top-nav">
+                        <li ><a href="#">全部套路</a>
+                            <ul>
+                                <li >徒手套路
+                                    <ul>
+                                        <li><a href="#">大力金刚指</a></li>
+                                        <li><a href="#">心佛掌</a></li>
+                                        <li><a href="#">圣梅秘诀(古谱)</a></li>
+                                    </ul>
+                                </li>
+                                <li >双剑套路
+                                    <ul>
+                                        <li><a href="#">九宫剑法</a></li>
+                                        <li><a href="#">忘川剑法</a></li>
+                                    </ul>
+                                </li>
+                                <li >单剑套路</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
@@ -156,6 +195,10 @@
     </div>
     </div>
 <div class="item_desc"></div>
+
+<script id="catagoryMode" type="template/htmlMode">
+    <span class="catagory" title="点击移除关键词" id="{{spanId}}" onclick="catagoryRemove(this)"><i></i>{{catagoryDesc}}</span>
+</script>
 
 <script id="checkGoodsTradeItem" type="template/htmlMode">
     <div class="pop_mark">
@@ -187,7 +230,7 @@
                 <dd class="goods_amount"><label>数量:</label>@{itemAmount_bak}</dd>
                 <dd class="goods_price margin_b_26">
                     &yen;@{price_bak}
-                    <span id="@{id}" class="follow @{isFollow}">@{followCount}</span>
+                    <span id="{{id}}" class="follow @{isFollow}">@{followCount}</span>
                 </dd>
             </dl>
             <i class="red_line"></i>
@@ -210,7 +253,7 @@
                 <dd class="goods_id"><label>物品编号:</label>@{id}</dd>
                 <dd class="goods_unit_price"><label>单价:</label>@{unitPrice_bak}</dd>
                 <dd class="goods_amount"><label>数量:</label>@{itemAmount_bak}</dd>
-                <dd class="goods_price margin_b_26">&yen;@{price_bak}<span id="@{id}" class="follow @{isFollow}">@{followCount}</span></dd>
+                <dd class="goods_price margin_b_26">&yen;@{price_bak}<span id="{{id}}" class="follow @{isFollow}">@{followCount}</span></dd>
             </dl>
             <i class="red_line"></i>
         </div>
@@ -222,9 +265,7 @@
     var v = window.config.version;
     var suffix = window.config.suffix;
     document.write('<link href="../style/main.css?v='+ v +'"  type="text/css" rel="stylesheet" />');
-    document.write('<script type="text/javascript" src="script/anonymous'+ suffix +'?v='+v+'"><\/script>');
-    document.write('<script type="text/javascript" src="script/follow'+ suffix +'?v='+v+'"><\/script>');
-    document.write('<script type="text/javascript" src="script/anonymousTradeItem'+ suffix +'?v='+v+'"><\/script>');
+    document.write('<script type="text/javascript" src="../script/main'+ suffix +'?v='+v+'"><\/script>');
 </script>
 </body>
 </html>
