--- a/TreasureFilter/html/toServerList.html
+++ b/TreasureFilter/html/toServerList.html
@@ -8,11 +8,11 @@
     <script type="text/javascript" src="../script/jquery.min.js"></script>
     <script type="text/javascript" src="../script/template.js"></script>
     <link href="../style/global.css"  type="text/css" rel="stylesheet" />
-    <script type="text/javascript">
+    <script>
         var _hmt = _hmt || [];
         (function() {
             var hm = document.createElement("script");
-            hm.src = "http://hm.baidu.com/h.js?5e7e25ab4d3f582093eaa02db58d288c";   <!-- 后续需要换上自己的链接 -->
+            hm.src = "https://hm.baidu.com/hm.js?a86a12a265ce7d1d140d4ef5196831e7";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
