--- a/TreasureFilter/html/main.html
+++ b/TreasureFilter/html/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <title>宝物筛选搜索</title>
@@ -13,7 +13,7 @@
         var _hmt = _hmt || [];
         (function() {
             var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?a86a12a265ce7d1d140d4ef5196831e7";
+            hm.src = "https://hm.baidu.com/hm.js?d53d4f92a9a63bfa630c69b5ca16072e";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
@@ -32,7 +32,7 @@
                 <p>
                     <span>当前服务器:</span>
                     <span id="serverName"></span>
-                    <a href="./toServerList.html">切服</a>
+                    <a href="http://treasure.rundstedt.cn/html/toServerList.html">切服</a>
                 </p>
             </div>
         </div>
@@ -170,7 +170,6 @@
             <a class="links" href="http://9yin.azurewebsites.net" target="_blank">永乐大典</a>
             <a class="links" href="http://jingmai.rundstedt.cn" target="_blank">经脉模拟</a>
             <a class="links" href="http://roles.rundstedt.cn" target="_blank">角色筛选</a>
-            <a class="links" href="http://jiuyin.realmmy.com" target="_blank">角色历史</a>
         </div>
         <div class="copy_right">
             <p class="textCenter">
