--- a/TreasureFilter/html/toServerList.html
+++ b/TreasureFilter/html/toServerList.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
+    <meta name="baidu-site-verification" content="code-7qqnZ1kB9s" />
     <meta charset="UTF-8">
     <title>选择游戏区服</title>
+    <meta name="keywords" content="宝物,搜索,查询,宝物属性,宝物筛选,宝物筛选搜索,九阴,九阴真经,集市,蜗牛集市,九阴集市,集市宝物,翡翠墨玉璜">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script>document.write("<script type='text/javascript' src='../script/version.js?v=" + Date.now() + "'><\/script>");</script>
     <script type="text/javascript" src="../script/jquery.min.js"></script>
@@ -12,7 +14,7 @@
         var _hmt = _hmt || [];
         (function() {
             var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?a86a12a265ce7d1d140d4ef5196831e7";
+            hm.src = "https://hm.baidu.com/hm.js?d53d4f92a9a63bfa630c69b5ca16072e";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
