--- a/TreasureFilter/html/main.html
+++ b/TreasureFilter/html/main.html
@@ -166,8 +166,8 @@
         <div class="footer_menu">
             <a class="links" href="http://jishi.woniu.com" target="_blank">九阴集市</a>
             <a class="links" href="https://9yin.woniu.com/main.html" target="_blank">九阴官网</a>
-            <a class="links" href="https://9yin.woniu.com/wiki/" target="_blank">九阴维基</a>
-            <a class="links" href="http://9yin.azurewebsites.net" target="_blank">永乐大典</a>
+            <a class="links" href="https://9yin.woniu.com/wiki" target="_blank">九阴维基</a>
+            <a class="links" href="http://rundstedt.cn" target="_blank">网站首页</a>
             <a class="links" href="http://jingmai.rundstedt.cn" target="_blank">经脉模拟</a>
             <a class="links" href="http://roles.rundstedt.cn" target="_blank">角色筛选</a>
         </div>
