--- a/TreasureFilter/html/main.html
+++ b/TreasureFilter/html/main.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <meta name="baidu-site-verification" content="code-7qqnZ1kB9s" />
     <meta charset="UTF-8">
     <title>宝物筛选搜索</title>
+    <meta name="keywords" content="宝物,搜索,查询,宝物属性,宝物筛选,宝物筛选搜索,九阴,九阴真经,集市,蜗牛集市,九阴集市,集市宝物,翡翠墨玉璜">
     <link href="../images/favicon.ico" rel="shortcut icon"  type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <script>document.write("<script type='text/javascript' src='../script/version.js?v=" + Date.now() + "'><\/script>");</script>
