--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <title>宝物筛选搜索</title>
     <meta name="keywords" content="宝物,搜索,查询,宝物属性,宝物筛选,宝物筛选搜索,九阴,九阴真经,集市,蜗牛集市,九阴集市,集市宝物,翡翠墨玉璜">
-    <link href="../images/favicon.ico" rel="shortcut icon"  type="image/x-icon">
+    <link href="css/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <script>document.write("<script type='text/javascript' src='../script/version.js?v=" + Date.now() + "'><\/script>");</script>
-    <link href="../style/global.css"  type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="../script/template.js"></script>
-    <script type="text/javascript" src="../script/jquery.min.js"></script>
+    <link href="css/main.css" type="text/css" rel="stylesheet" />
+    <link href="css/global.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="js/template.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -23,8 +24,8 @@
 </head>
 <body class="show-top olts_red content_page">
     <div id="particles-js" class="web_bg"></div>
-    <script src="../script/particles.min.js"></script>
-    <script src="../script/particles-conf.js"></script>
+    <script src="js/particles.min.js"></script>
+    <script src="js/particles-conf.js"></script>
 
     <div class="warp">
         <div class="top-menu">
@@ -126,10 +127,10 @@
                     <li class="default selected" data-param="default">默认排序</li>
                     <li class="asc" data-param="D_PUBLICITY_END_DATE">时间<i></i></li>
                     <li class="asc" data-param="N_PRICE">价格<i></i></li>
-                    <li >
+                    <li>
                         翡翠墨玉璜：
                     </li>
-                    <li  >
+                    <li>
                         <select id="taolu">
                             <option value="0">全部套路</option>
                             <option value="tushou">徒手套路</option>
@@ -225,13 +226,6 @@
             </div>
             <div class="goods_tips">{{#itemDesc}}</div>
         </div>
-    </script>
-
-    <script type="text/javascript">
-        var v = window.config.version;
-        var suffix = window.config.suffix;
-        document.write('<link href="../style/main.css?v='+ v +'"  type="text/css" rel="stylesheet" />');
-        document.write('<script type="text/javascript" src="../script/main'+ suffix +'?v='+v+'"><\/script>');
     </script>
 </body>
 </html>
